--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module Defaults::Modern
 
+0.009003 2016-06-23
+
+  - No longer need MooX::late (Moo-2+ provides 'coerce =>' support)
+
 0.009002 2016-06-23
 
   - Depend on newer Path::Tiny, Function::Parameters,
